# pc-ble-driver

./: CMakeLists.txt  build-link.bat
clang-bindings/: createBindings.py
cmake/: pc-ble-driver.cmake
examples/heart_rate_collector/: main.c
hex/sd_api_v2/: sdk110_connectivity.patch
hex/sd_api_v5/: sdk140_connectivity.patch
include/common/: sd_rpc.h
include/common/internal/transport/: webusb_interface.h
include/common/internal/transport_interface/: adapter_internal.h  h5_transport.h  serialization_transport.h  transport.h  webusb_interface.h
src/common/: ble_driver_emscripten.cpp  emscripten_adapter.cpp  hrm.c  sd_rpc_impl.cpp
src/common/transport/: h5_transport.cpp  serialization_transport.cpp  transport.cpp  webusb_interface.cpp
src/common/transport_interface/: adapter_internal.cpp  h5_transport.cpp  serialization_transport.cpp  transport.cpp  webusb_interface.cpp
src/js/: adapter_internal.js  ble_common.js  ble_impl.js  class_bindings.js  index.html  interface.js
src/js/transport/: h5.js  h5_transport.js  h5_transport_exit_criterias.js  serial.js  serialization_transport.js  slip.js  transport.js  webusb_interface.js
test/: run_module.js
